--- a/tutorial/SSR/SSR.html
+++ b/tutorial/SSR/SSR.html
@@ -138,6 +138,14 @@
                     <strong>Step-1:</strong>点下载链接后，在最新的那个release里下载图中的这个文件。如果你的电脑是32位的就下载Win32版本的，不知道自己电脑是多少位的话，可以去百度搜“区分32位和64位系统”，
                     一般不是特别老的电脑都是64位系统（直接下载红框内的那个）。
                 </p>
+                <img src="win_1.png" width="70%">
+                <p><strong>Step-2:</strong>下载后解压，打开exe文件，弹出来的提示框选否，会打开订阅设置</p>
+                <img src="win_2.png" width="70%">
+                <p><strong>Step-3:</strong>登录机场，在机场首页找到SSR节点订阅地址，把地址复制下来</p>
+                <img src="win_3.png" width="70%">
+                <p><strong>Step-4:</strong>回到SSR的订阅设置，在订阅设置里点添加，右边栏里订阅地址粘贴刚刚复制过的地址，订阅备注可以随意填，其他的地方建议不要动，最后按“确定并更新”</p>
+                <img src="win_4.png" width="70%">
+                <p><strong>Step-5:</strong>在任务栏右侧找到SSR的纸飞机图标，右键弹出菜单，</p>
             </article>
 
         </section>
