SSR-95% 写完Windows客户端

--- a/tutorial/SSR/SSR.html
+++ b/tutorial/SSR/SSR.html
@@ -118,8 +118,8 @@
                     正如刚刚说的，机场的网站是很不稳定的，裸连时可能会很慢甚至会出错（通过SSR连接的话会快很多），需要大家多尝试几次。
                 </p>
                 <p>
-                    这两个里面我更推荐机场A，机场B是我最近才找到的，而机场A我自己用了一年多了。相比之下，机场A提供的节点更多，价格会更低一点。
-                    机场B网站做的更漂亮，价格相差不大。
+                    这两个里面我更推荐机场A（下面都是以机场A为例讲的），机场B是我最近才找到的，而机场A我自己用了一年多了。相比之下，机场A提供的节点更多，价格会更低一点。
+                    机场B网站做的更漂亮，价格也相差不大。
                 </p>
                 <p>
                     机场都会提供相应的教程，但我觉得讲的太敷衍，大家也可以去看看。另外一点是，特定时候机场会打折，比如这个元旦机场A直接5折，这时候氪金就会划算很多，
@@ -129,25 +129,57 @@
 
             <div class="line"></div>
 
-            <article id="client">
-                <h1>客户端</h1>
+            <article id="windowsClient">
+                <h1>Windows客户端 <a href="https://github.com/HMBSbige/ShadowsocksR-Windows/releases" target="_blank">下载链接</a></h1>
                 <p>SSR功能很强大，不同平台上的客户端大同小异，这里主要以Windows的SSR客户端来讲。</p>
-                <h2>Windows <a href="https://github.com/HMBSbige/ShadowsocksR-Windows/releases" target="_blank">下载链接</a>
-                </h2>
-                <p>
-                    <strong>Step-1:</strong>点下载链接后，在最新的那个release里下载图中的这个文件。如果你的电脑是32位的就下载Win32版本的，不知道自己电脑是多少位的话，可以去百度搜“区分32位和64位系统”，
-                    一般不是特别老的电脑都是64位系统（直接下载红框内的那个）。
-                </p>
+                <p><br><strong>Step-1:</strong>点下载链接后，在最新的那个release里下载图中的这个文件。如果你的电脑是32位的就下载Win32版本的，不知道自己电脑是多少位的话，可以去百度搜“区分32位和64位系统”，
+                    一般不是特别老的电脑都是64位系统（直接下载红框内的那个）。</p>
                 <img src="win_1.png" width="70%">
-                <p><strong>Step-2:</strong>下载后解压，打开exe文件，弹出来的提示框选否，会打开订阅设置</p>
-                <img src="win_2.png" width="70%">
-                <p><strong>Step-3:</strong>登录机场，在机场首页找到SSR节点订阅地址，把地址复制下来</p>
+                <p><br><strong>Step-2:</strong>下载后解压，打开exe文件，弹出来的提示框选否，会打开订阅设置</p>
+                <img src="win_2.png" width="30%">
+                <p><br><strong>Step-3:</strong>登录机场，在机场首页找到SSR节点订阅地址，把地址复制下来（这是机场A页面的一部分）</p>
                 <img src="win_3.png" width="70%">
-                <p><strong>Step-4:</strong>回到SSR的订阅设置，在订阅设置里点添加，右边栏里订阅地址粘贴刚刚复制过的地址，订阅备注可以随意填，其他的地方建议不要动，最后按“确定并更新”</p>
+                <p><br><strong>Step-4:</strong>回到SSR的订阅设置，在订设置里点添加，右边栏里订阅地址粘贴刚刚复制过的地址，订阅备注可以随意填，其他的地方建议不要动（等你看完这篇教程就可以瞎动了），最后按“确定并更新”
+                </p>
                 <img src="win_4.png" width="70%">
-                <p><strong>Step-5:</strong>在任务栏右侧找到SSR的纸飞机图标，右键弹出菜单，</p>
+                <p><br><strong>Step-5 系统代理:</strong>在任务栏右侧找到SSR的纸飞机图标，右键弹出菜单，打开系统代理子菜单</p>
+                <img src="win_5.png" width="40%">
+                <ul>
+                    <li><strong>直连（较为常用）</strong>：所有流量（准确来说是HTTP协都不会经过议下的流量）SSR，相当于没开SSR</li>
+                    <li>
+                        <strong>PAC（不常用）</strong>：这种模式会根据PAC文件中的指定规则来判断流量是否通过SSR，打个比方你如果在PAC文件中指定bilibili.com也要经过SSR代理，则你访问B站的流量也会通过墙外服务器。PAC文件在SSR文件夹的根目录下，那个pac.txt就是。
+                        需要强调的一点的是，PAC代理模式一般不用，因为接下来介绍的全局模式完全包含了PAC模式所有的功能。
+                    </li>
+                    <li><strong>全局（日常使用）</strong>：所有流量都会经过SSR，但是SSR会根据流量指向自动判断这个流量是否要墙外服务器来插手，具体的判断规则会在下一节的“规则设置”中详细介绍
+                    </li>
+                    <li><strong>不修改（更不常用）</strong>：对于像我一样的萌新而言，跟直连模式没啥区别。</li>
+                </ul>
+                <p><br><strong>Step-6规则设置</strong>：规则设置主要是针对PAC模式和全局模式下的流量代理规则，第一个子菜单“更新PAC”就是PAC模式下的规则，第二个子菜单“代理规则”适用于上一步的全局模式，由于这两个子菜单里的选项都差不多，拿更为常用的“代理规则”里的选项来讲讲
+                </p>
+                <img src="win_6.png" width="40%">
+                <ul>
+                    <li><strong>绕过局域网（不常用）</strong>：绕过的意思就是不走代理（SSR），绕过局域网就是局域网内的流量将不通过SSR而是直接连接，常见的局域网环境例如学校机房，其他形式的流量会走SSR代理
+                    </li>
+                    <li><strong>绕过局域网和大陆（常用）</strong>：绕过局域网的意思同上，绕过大陆指的是你访问一些国内（大陆地区）网站时，这部分流量也是不经过SSR的，这部分之外的流量走SSR。例如，访问百度不会走SSR，但是访问Google时会。<strong>请注意！</strong>
+                        在这个设置下，你想在B站看港澳台的番剧时会发现还是行不通，道理很简单，B站时国内网站，没有走SSR代理，解决办法是在这个菜单下设置为全局（下面会讲）。（百度查IP地址也是一个道理）
+                    </li>
+                    <li><strong>绕过局域网和非大陆（海外党常用）</strong>：同理可得，非大陆的流量将不走SSR，大陆的流量走SSR，用于大陆外的小伙伴翻回墙内白嫖某些资源。</li>
+                    <li><strong>用户自定义（不常用）</strong>：作用类似于PAC，进阶功能，反正我是没用过</li>
+                    <li><strong>全局（常用）</strong>：所有的流量经过SSR，用处就是访问国内网站时改变IP地址，比如访问百度和B站时也会让墙外服务器帮你一把，从而让你能看到B站的港澳台限定的番。
+                    </li>
+                </ul>
+                <p><br><strong>Step-7 切换节点</strong>：日常使用时，上面两个一般设置为“全局系统代理”和“绕过局域网和大陆”。设置完成后，可能还是上不了Google，原因是SSR默认连接机场返回的节点列表中的第一个节点，而这个节点可能是不可用的，这时需要切换到可用节点。
+                </p>
+                <p>打开连接统计，有两种方法，第一种是中键SSR任务栏图标，第二种是右键任务栏图标，在菜单中找服务器——连接统计。</p>
+                <img src="win_7.png" width="100%">
+                <p>连接统计里会有很详细的节点信息。平均下载速度其实就是当前通过SSR的流量速度，总下载是这个节点所有时间的下载量，实下载是本次使用SSR这个节点的下载量。</p>
+                <p><br>在这着重强调下<strong>节点名字的含义</strong>，也就是服务器那一栏。虽然每个机场可能给节点的命名规则不一样，但大同小异，具体的可以参考机场的公告。</p>
+                <p>名字前面的地区一般决定了你的IP地址段，这个针对部分锁IP的网站和游戏，比如P站会限制特定IP区间的流量才能访问，一般挂日本地区的节点就没什么大问题，但是你挂香港节点有可能就连不上。</p>
+                <p>名字后面的数字加乘号，表示机场的流量统计方式。那图中我挂着的这个节点为例，后面写着20x，那么你实下载1M的流量，在机场那统计的流量使用量是1M x 20 =20M，因为深港专线服务器租赁费用比较高，能提供更快的连接速度和防止被墙。平时使用时要格外注意，防止发生我有一个朋友一天烧了80G流量的类似悲剧。（真的是我的一个朋友！）</p>
+                <p>如果大家对节点感兴趣的话，这里给出一张图（图来自机场B）和一个<a href="https://www.duyaoss.com/archives/1086/" target="_blank">链接</a>，讲的是比我强多了。</p>
+                <img src="win_8.png" width="100%">
+                <p><strong>Step-8 OVER!</strong>：一通操作猛如虎，再看墙来有似无。Windows上的SSR客户端基本介绍就完结了，欢迎来到（回到）新世界！</p>
             </article>
-
         </section>
     </div>
 </body>
