SSR-2.1 接入第三方评论板块

--- a/tutorial/SSR/SSR.html
+++ b/tutorial/SSR/SSR.html
@@ -16,7 +16,8 @@
     <div id="allContent">
         <div class="centerImg">
             <img src="SSRimg.png" width="50%" alt="SSR的图标">
-            <h2>最后更新：2020年1月24日1:46</h2>
+            <h2>最后更新：2020年1月24日18:15</h2>
+            <h2>更新内容：接入评论系统</h2>
         </div>
         <div class="line"></div>
 
@@ -53,7 +54,7 @@
             <div class="line"></div>
 
             <article id="function">
-                <h1>SSR作用（现在已知的情报）</h1>
+                <h1>SSR作用：翻墙</h1>
                 <ul>
                     <li>访问原本不可访问的外网网站，如Google</li>
                     <li>提高薛定谔访问状态的外网网站的访问速度和稳定性，如github和Microsoft系列</li>
@@ -257,8 +258,8 @@
 
         <div id="comments">
             <h1>评论区</h1>
+            <p>由于自己过于辣鸡，写不出评论系统，只好接入第三方评论板块。非网站原生代码，所以可能加载起来会有点慢，请各位耐心等待一下下。</p>
             
-            <!-- 来必力City版安装代码 -->
             <div id="lv-container" data-id="city" data-uid="MTAyMC80ODM4Mi8yNDg3Ng==">
                 <script type="text/javascript">
                     (function (d, s) {
@@ -273,9 +274,7 @@
                         e.parentNode.insertBefore(j, e);
                     })(document, 'script');
                 </script>
-                <noscript> 为正常使用来必力评论功能请激活JavaScript</noscript>
             </div>
-            <!-- City版安装代码已完成 -->
             
         </div>
     </div>
