--- a/tutorial/tutorial.html
+++ b/tutorial/tutorial.html
@@ -15,20 +15,24 @@
         <div id="headerTitle">教程</div>
     </header>
 
-    <div class="contentBorder">
-        <a href="SSR/SSR.html">
-            <div class="content">
-                <h1>SSR使用教程</h1>
-                <img src="SSR/SSRimg.png" width="40%" height="30%">
-            </div>
-        </a>
-    </div>
+    <div id="allContent">
+        <div class="contentBorder">
+            <a href="SSR/SSR.html">
+                <div class="content">
+                    <h1>SSR使用教程</h1>
+                    <img src="SSR/SSRimg.png" width="40%" height="30%" alt="SSR图标">
+                </div>
+            </a>
+        </div>
 
-    <div class="contentBorder">
-        <a href="../index.html">
-            <div class="content">
-            </div>
-        </a>
+        <div class="contentBorder">
+            <a href="../index.html">
+                <div class="content">
+                    <h1>OneNote调教手段</h1>
+                    <img src="OneNote/OneNoteIcon.jpg" width="40%" height="30%" alt="OneNote图标">
+                </div>
+            </a>
+        </div>
     </div>
 
 </body>
