教程目录页-2.0 CSS大改

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="tableBackground">
         <div id="background">
-            <a href="tutorial/tutorial.html"><h1>SoraPage</h1></a>
+            <a href="tutorial/tutorialCatalog.html"><h1>SoraPage</h1></a>
         </div>
     </div>
 </body>
