--- a/tutorial/tutorialCatalog.html
+++ b/tutorial/tutorialCatalog.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title>SoraPage-教程</title>
     <link type="text/css" rel="stylesheet" href="tutorial.css" />
+    <link type="text/css" rel="stylesheet" href="tutorialCatalog.css" />
 </head>
 
 <body>
@@ -15,6 +16,7 @@
         <div id="headerTitle">教程</div>
     </header>
 
+    <img id="background" src="tcBackground.jpg">
     <div id="allContent">
         <div class="contentBorder">
             <a href="SSR/SSR.html">
@@ -28,11 +30,12 @@
         <div class="contentBorder">
             <a href="../index.html">
                 <div class="content">
-                    <h1>OneNote调教手段</h1>
+                    <h1>OneNote调教方法</h1>
                     <img src="OneNote/OneNoteIcon.jpg" width="40%" height="30%" alt="OneNote图标">
                 </div>
             </a>
         </div>
+
     </div>
 
 </body>
