--- a/tutorial/tutorialCatalog.html
+++ b/tutorial/tutorialCatalog.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>SoraPage-教程</title>
-    <link type="text/css" rel="stylesheet" href="tutorial.css" />
+    <link type="text/css" rel="stylesheet" href="tutorialHeader.css" />
     <link type="text/css" rel="stylesheet" href="tutorialCatalog.css" />
 </head>
 
@@ -28,7 +28,7 @@
         </div>
 
         <div class="contentBorder">
-            <a href="../index.html">
+            <a href="OneNote/OneNote.html">
                 <div class="content">
                     <h1>OneNote调教方法</h1>
                     <img src="OneNote/OneNoteIcon.jpg" width="40%" height="30%" alt="OneNote图标">
