css性能改进 压缩部分图片大小

--- a/tutorial/SSR/SSR.html
+++ b/tutorial/SSR/SSR.html
@@ -219,8 +219,8 @@
                     但是前提是得有个非中国的苹果账号，这玩意还不是很好搞。不过如何注册日本或者美国地区的苹果账号的教程，百度上一抓一大把，啥时候有空了，说不定自己也会写（有生之年+2）。
                     反正我只记得我注册日区账号时，电话和住址填的是右下图中秋叶原的柚子社商店（滑稽）。
                 </p>
-                <img src="ios_1.PNG" width="30%" class="iosImg" alt="App Store中Shadowrocket页面">
-                <img src="ios_2.PNG" width="30%" class="iosImg" alt="Google Maps中柚子商店的地址">
+                <img src="ios_1.jpg" width="30%" class="iosImg" alt="App Store中Shadowrocket页面">
+                <img src="ios_2.jpg" width="30%" class="iosImg" alt="Google Maps中柚子商店的地址">
                 <p>千辛万苦注册好苹果账号后，你还得氪金买这个APP，貌似是3美金，所以你还得往你的苹果账号里充钱，首先你得有张master或者visa的信用卡。</p>
                 <p>这些本来都是些很麻烦的操作，直到万能的淘宝出现了。不论是苹果账号还是充钱，有钱能使鬼推磨，你都能在淘宝上享受一条龙服务。买号大概5RMB,买礼品卡充钱最少好像是5美金起卖，总成本就是40左右。（我美区账号淘宝买的，日区账号自己注册的，也不是那么麻烦）
                 </p>
