--- a/tutorial/tutorialCatalog.html
+++ b/tutorial/tutorialCatalog.html
@@ -6,6 +6,18 @@
     <title>SoraPage-教程</title>
     <link type="text/css" rel="stylesheet" href="tutorialHeader.css" />
     <link type="text/css" rel="stylesheet" href="tutorialCatalog.css" />
+    <style>
+        #background {
+            position: fixed;
+            z-index: -2;
+            top: 42px;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            opacity: 0.9;
+        }
+    </style>
 </head>
 
 <body>
