--- a/index.html
+++ b/index.html
@@ -1,15 +1,63 @@
 ﻿<!doctype html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <title>SoraPage</title>
-    <link type="text/css" rel="stylesheet" href="index.css"/>
+    <style>
+        html,
+        body {
+            height: 100%;
+            width: 100%;
+            margin: 0px;
+            padding: 0px;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        a:link {
+            text-decoration: none;
+        }
+
+        a:visited {
+            text-decoration: none;
+        }
+
+        #tableBackground {
+            height: 100%;
+            width: 100%;
+            display: table;
+        }
+
+        #background {
+            background-image: url(indexBackground.jpg);
+            background-size: cover;
+            display: table-cell;
+            height: 100%;
+            width: 100%;
+            vertical-align: middle;
+            opacity: 0.8;
+        }
+
+        #background h1 {
+            margin: 0;
+            font-weight: bolder;
+            font-size: 100px;
+            color: white;
+            text-align: center;
+            opacity: 1;
+            text-shadow: -2px -2px 10px rgba(0, 0, 0, 0.3);
+        }
+    </style>
 </head>
+
 <body>
     <div id="tableBackground">
         <div id="background">
-            <a href="tutorial/tutorialCatalog.html"><h1>SoraPage</h1></a>
+            <a href="tutorial/tutorialCatalog.html">
+                <h1>SoraPage</h1>
+            </a>
         </div>
     </div>
 </body>
+
 </html>
