--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>SoraPage</title>
+    <link rel="icon" href="icon.png" type="image/x-icon">
     <style>
         html,
         body {
