--- a/tutorial/OneNote/OneNote.html
+++ b/tutorial/OneNote/OneNote.html
@@ -2,10 +2,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>SoraPage-OneNote</title>
+    <link rel="icon" href="../../icon.png" type="image/x-icon">
     <link type="text/css" rel="stylesheet" href="../tutorialHeader.css" />
     <link type="text/css" rel="stylesheet" href="../tutorial.css" />
     <link type="text/css" rel="stylesheet" href="OneNote.css" />
-    <title>SoraPage-OneNote</title>
 </head>
 
 <body>
