--- a/tutorial/SSR/SSR.html
+++ b/tutorial/SSR/SSR.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>SoraPage-SSR教程</title>
+    <link rel="icon" href="../../icon.png" type="image/x-icon">
     <link type="text/css" rel="stylesheet" href="../tutorialHeader.css" />
     <link type="text/css" rel="stylesheet" href="../tutorial.css" />
     <link type="text/css" rel="stylesheet" href="SSR.css" />
