--- a/tutorial/tutorialCatalog.html
+++ b/tutorial/tutorialCatalog.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>SoraPage-教程</title>
+    <link rel="icon" href="../icon.png" type="image/x-icon">
     <link type="text/css" rel="stylesheet" href="tutorialHeader.css" />
     <link type="text/css" rel="stylesheet" href="tutorialCatalog.css" />
     <style>
