--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <body>
     <div id="tableBackground">
         <div id="background">
-            <a href="tutorial/tutorialCatalog.html">
+            <a href="homepage.html">
                 <h1>SoraPage</h1>
             </a>
         </div>
