--- a/homepage.html
+++ b/homepage.html
@@ -11,37 +11,50 @@
     <div id="wholePage">
         <header>Homepage</header>
         <div id="catalog">
-
+            <!--经验分享区-->
             <div id="tutorial" class="catalogLayout">
                 <div class="sortTitle"><a href="./tutorial/tutorialCatalog.html">经验分享区</a></div>
 
                 <div class="sortInfo">
                     <div class="updateInfo">
-                        <div class="lastUpdate">最近更新：2020.1.27</div>
-                        <div class="updateContent">更新内容：123456</div>
+                        <div class="lastUpdate">最近更新：2020.1.26</div>
+                        <div class="updateContent">更新内容：增加OneNote教程</div>
                     </div>
                     <div class="sortCatlog">
                         <ul>
-                            <li>123</li>
-                            <li>345</li>
+                            <li><a href="./tutorial/tutorialCatalog.html">目录页</a></li>
+                            <li><a href="./tutorial/SSR/SSR.html">SSR使用教程</a></li>
+                            <li><a href="./tutorial/OneNote/OneNote.html">OneNote调教方法</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!--ACGN区-->
+            <div id="ACGN" class="catalogLayout">
+                <div class="sortTitle">ACGN区</div>
+                <div class="sortInfo" id="ACGNInfo">
+                    <img src="construction.svg">施工中...
+                </div>
+            </div>
+            <!--SoraPage相关-->
+            <div id="aboutWebsite" class="catalogLayout">
+                <div class="sortTitle">SoraPage相关</div>
+
+                <div class="sortInfo">
+                    <div class="updateInfo">
+                        <div class="lastUpdate">最近更新：无</div>
+                        <div class="updateContent">更新内容：无</div>
+                    </div>
+                    <div class="sortCatlog">
+                        <ul>
+                            <li><a href="">关于Sora和SoraPage</a></li>
+                            <li><a href="">SoraPage开发日志</a></li>
                         </ul>
                     </div>
                 </div>
 
             </div>
-
-            <div id="ACGN" class="catalogLayout">
-                <div class="sortTitle">ACGN区</div>
-                <div class="sortInfo"></div>
-            </div>
-
-            <div id="aboutWebsite" class="catalogLayout">
-                <div class="sortTitle">SoraPage相关</div>
-                <div class="sortInfo"></div>
-            </div>
-
         </div>
-    </div>
 </body>
 
 </html>
