--- a/homepage.html
+++ b/homepage.html
@@ -42,13 +42,14 @@
 
                 <div class="sortInfo">
                     <div class="updateInfo">
-                        <div class="lastUpdate">最近更新：无</div>
-                        <div class="updateContent">更新内容：无</div>
+                        <div class="lastUpdate">最近更新：2020.1.28</div>
+                        <div class="updateContent">更新内容：开发日志上线</div>
                     </div>
                     <div class="sortCatlog">
                         <ul>
-                            <li><a href="">关于Sora和SoraPage</a></li>
-                            <li><a href="">SoraPage开发日志</a></li>
+                            <li><a href="">关于Sora和SoraPage (施工中...)</a></li>
+                            <li><a href="./aboutWebsite/developmentLog/developmentLog.html">SoraPage开发日志</a></li>
+                            <li><a href="">吐槽区 (施工中...)</a></li>
                         </ul>
                     </div>
                 </div>
