修改header中链接SoraPage指向

--- a/tutorial/SSR/SSR.html
+++ b/tutorial/SSR/SSR.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <div id="headerWebname"> <a href="../../index.html">SoraPage</a> </div>
+        <div id="headerWebname"> <a href="../../homepage.html">SoraPage</a> </div>
         <div id="headerTitle">SSR教程</div>
     </header>
 
