--- a/tutorial/tutorialCatalog.html
+++ b/tutorial/tutorialCatalog.html
@@ -24,7 +24,7 @@
 <body>
     <header>
         <span id="headerWebname">
-            <a href="../index.html">SoraPage</a>
+            <a href="../homepage.html">SoraPage</a>
         </span>
         <div id="headerTitle">教程</div>
     </header>
