--- a/tutorial/OneNote/OneNote.html
+++ b/tutorial/OneNote/OneNote.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <span id="headerWebname">
-            <a href="../../index.html">SoraPage</a>
+            <a href="../../homepage.html">SoraPage</a>
         </span>
         <div id="headerTitle">OneNote调教方法</div>
     </header>
