homepage-2.0 增加移动端适配CSS PC端CSS略微改动

--- a/homepage.html
+++ b/homepage.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>SoraPage-HomePage</title>
     <link rel="icon" href="icon.png" type="image/x-icon">
-    <link type="text/css" rel="stylesheet" href="homepage.css" />
+    <link type="text/css" rel="stylesheet" href="homepage.css" media="screen and (min-device-width: 701px)" />
+    <link type="text/css" rel="stylesheet" href="homepageM.css" media="screen and (max-device-width: 700px)" />
 </head>
 
 <body>
@@ -20,7 +21,7 @@
                         <div class="lastUpdate">最近更新：2020.1.26</div>
                         <div class="updateContent">更新内容：增加OneNote教程</div>
                     </div>
-                    <div class="sortCatlog">
+                    <div class="sortCatalog">
                         <ul>
                             <li><a href="./tutorial/tutorialCatalog.html">目录页</a></li>
                             <li><a href="./tutorial/SSR/SSR.html">SSR使用教程</a></li>
@@ -45,7 +46,7 @@
                         <div class="lastUpdate">最近更新：2020.1.28</div>
                         <div class="updateContent">更新内容：开发日志上线</div>
                     </div>
-                    <div class="sortCatlog">
+                    <div class="sortCatalog">
                         <ul>
                             <li><a href="">关于Sora和SoraPage (施工中...)</a></li>
                             <li><a href="./aboutWebsite/developmentLog/developmentLog.html">SoraPage开发日志</a></li>
