--- a/aboutWebsite/developmentLog/developmentLog.html
+++ b/aboutWebsite/developmentLog/developmentLog.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>SoraPage-开发日志</title>
+    <link rel="icon" href="../../icon.png" type="image/x-icon">
     <link type="text/css" rel="stylesheet" href="developmentLog.css" />
 </head>
 
