更新1.28的开发日志

--- a/aboutWebsite/developmentLog/developmentLog.html
+++ b/aboutWebsite/developmentLog/developmentLog.html
@@ -60,7 +60,13 @@
                 <div id="allLogs">
                     <div class="log">
                         <h1>2020.1.28</h1>
-                        <p></p>
+                        <p>
+                            昨天整的HomePage和今天码一天的开发日志页面，总算是框架成型了，全部采用flex布局。这玩意香倒是真的香，只不过代码量蹭蹭蹭地上涨。
+                            就这两个页面看起来非常非常简单基础的布局，每一个页面的CSS代码都在110行左右。姑且算是掌握了个flex的皮毛吧。
+                        </p>
+                        <p>
+                            靠着仅仅一本书的HTML和CSS知识，局限性实在是太大了。接下来的几天还是应该再多多学习，JS得继续前进，还有我的TOEFL。（哭）
+                        </p>
                     </div>
                     <div id="dividingLine"></div>
                 </div>
