简易版吐槽区-1.0

--- a/aboutWebsite/developmentLog/developmentLog.html
+++ b/aboutWebsite/developmentLog/developmentLog.html
@@ -46,7 +46,7 @@
                         </li>
                         <li>
                             <h1>2020.01.28</h1>
-                            <p>Homepage、开发日志页-1.0上线</p>
+                            <p>Homepage、开发日志页、简易版吐槽区上线</p>
                         </li>
                     </ul>
                 </div>
@@ -64,6 +64,7 @@
                             昨天整的HomePage和今天码一天的开发日志页面，总算是框架成型了，全部采用flex布局。这玩意香倒是真的香，只不过代码量蹭蹭蹭地上涨。
                             就这两个页面看起来非常非常简单基础的布局，每一个页面的CSS代码都在110行左右。姑且算是掌握了个flex的皮毛吧。
                         </p>
+                        <p>晚上随手撸了个吐槽区的代码，极简极丑，等学会JS再去优化（自己写评论系统才是正道，严肃脸）。</p>
                         <p>
                             靠着仅仅一本书的HTML和CSS知识，局限性实在是太大了。接下来的几天还是应该再多多学习，JS得继续前进，还有我的TOEFL。（哭）
                         </p>
