--- a/homepage.html
+++ b/homepage.html
@@ -50,7 +50,7 @@
                         <ul>
                             <li><a href="">关于Sora和SoraPage (施工中...)</a></li>
                             <li><a href="./aboutWebsite/developmentLog/developmentLog.html">SoraPage开发日志</a></li>
-                            <li><a href="">吐槽区 (施工中...)</a></li>
+                            <li><a href="./aboutWebsite/commentArea/commentArea.html">吐槽区（简易+丑陋版）</a></li>
                         </ul>
                     </div>
                 </div>
