所有html添加谷歌流量统计

--- a/aboutWebsite/commentArea/commentArea.html
+++ b/aboutWebsite/commentArea/commentArea.html
@@ -57,6 +57,15 @@
             color: rgb(25, 25, 25);
         }
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156500969-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-156500969-1');
+    </script>
 </head>
 
 <body>
@@ -71,7 +80,8 @@
     <div id="allContent">
         <div id="comments">
             <p>欢迎大噶来到吐槽区，目前由于处于内测阶段，估计也没啥不认识的小伙伴会戳进来...</p>
-            <p>本来是想搞个匿名评论的，但是奈何自己太菜了不会写评论系统，只好借用第三方的一个韩国的系统，然而这个系统要求必须用社交账号登录后才能发表评论...所以就是很担心大家因为这就不想评论的说，更何况这个评论区又破又难看...</p>
+            <p>本来是想搞个匿名评论的，但是奈何自己太菜了不会写评论系统，只好借用第三方的一个韩国的系统，然而这个系统要求必须用社交账号登录后才能发表评论...所以就是很担心大家因为这就不想评论的说，更何况这个评论区又破又难看...
+            </p>
             <p>真的很希望大家不要在意这些细节的！（我也会很努力地改进这个评论区的）</p>
             <p>反正啥都能说，不管是不是关于这个小破站的事。评论的各位我都会收到邮件的，会第一时间回复的！</p>
             <p>总而言之，非常欢迎民那桑多多交流，想说啥就说啥。（一脸真诚）</p>
