--- a/homepage.html
+++ b/homepage.html
@@ -6,6 +6,15 @@
     <link rel="icon" href="icon.png" type="image/x-icon">
     <link type="text/css" rel="stylesheet" href="homepage.css" media="screen and (min-device-width: 701px)" />
     <link type="text/css" rel="stylesheet" href="homepageM.css" media="screen and (max-device-width: 700px)" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156500969-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-156500969-1');
+    </script>
 </head>
 
 <body>
