--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
             text-shadow: -2px -2px 10px rgba(0, 0, 0, 0.3);
         }
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156500969-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-156500969-1');
+    </script>
 </head>
 
 <body>
