--- a/tutorial/OneNote/OneNote.html
+++ b/tutorial/OneNote/OneNote.html
@@ -7,6 +7,15 @@
     <link type="text/css" rel="stylesheet" href="../tutorialHeader.css" />
     <link type="text/css" rel="stylesheet" href="../tutorial.css" />
     <link type="text/css" rel="stylesheet" href="OneNote.css" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156500969-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-156500969-1');
+    </script>
 </head>
 
 <body>
@@ -142,7 +151,7 @@
                 </script>
             </div>
         </div>
-        
+
     </div>
 </body>
 
