--- a/tutorial/SSR/SSR.html
+++ b/tutorial/SSR/SSR.html
@@ -7,6 +7,15 @@
     <link type="text/css" rel="stylesheet" href="../tutorialHeader.css" />
     <link type="text/css" rel="stylesheet" href="../tutorial.css" />
     <link type="text/css" rel="stylesheet" href="SSR.css" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156500969-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-156500969-1');
+    </script>
 </head>
 
 <body>
@@ -16,7 +25,7 @@
     </header>
 
     <div id="allContent">
-        
+
         <div class="centralImg">
             <img src="SSRimg.png" width="50%" alt="SSR的图标">
             <h2>最后更新：2020年1月24日18:15</h2>
