--- a/homepage.html
+++ b/homepage.html
@@ -9,6 +9,7 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156500969-1"></script>
     <script>
+        alert("PC端食用效果更佳~\n欢迎大家到吐槽区和教程下方评论区留言~");
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
