评论系统重做

--- a/aboutWebsite/commentArea/commentArea.html
+++ b/aboutWebsite/commentArea/commentArea.html
@@ -86,6 +86,7 @@
             <p>反正啥都能说，不管是不是关于这个小破站的事。评论的各位我都会收到邮件的，会第一时间回复的！</p>
             <p>总而言之，非常欢迎民那桑多多交流，想说啥就说啥。（一脸真诚）</p>
             <strong>PS:评论系统中那个用邮箱就能评论的，其实是注册这个评论系统网站的账号，大家慎点。（要输密码的就没什么好东西）</strong>
+            <!--来必力评论系统-->
             <div id="lv-container" data-id="city" data-uid="MTAyMC80ODM4Mi8yNDg3Ng==">
                 <script type="text/javascript">
                     (function (d, s) {
