--- a/homepage.html
+++ b/homepage.html
@@ -60,7 +60,10 @@
                         <ul>
                             <li><a href="">关于Sora和SoraPage (施工中...)</a></li>
                             <li><a href="./aboutWebsite/developmentLog/developmentLog.html">SoraPage开发日志</a></li>
-                            <li><a href="./aboutWebsite/commentArea/commentArea.html">吐槽区（简易+丑陋版）</a></li>
+                            <li id="commentArea">
+                                <img src="comment.svg" width="7%">
+                                <a href="./aboutWebsite/commentArea/commentArea.html">吐槽区</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
