--- a/aboutWebsite/commentArea/commentArea.html
+++ b/aboutWebsite/commentArea/commentArea.html
@@ -80,28 +80,22 @@
     <div id="allContent">
         <div id="comments">
             <p>欢迎大噶来到吐槽区，目前由于处于内测阶段，估计也没啥不认识的小伙伴会戳进来...</p>
-            <p>本来是想搞个匿名评论的，但是奈何自己太菜了不会写评论系统，只好借用第三方的一个韩国的系统，然而这个系统要求必须用社交账号登录后才能发表评论...所以就是很担心大家因为这就不想评论的说，更何况这个评论区又破又难看...
-            </p>
-            <p>真的很希望大家不要在意这些细节的！（我也会很努力地改进这个评论区的）</p>
-            <p>反正啥都能说，不管是不是关于这个小破站的事。评论的各位我都会收到邮件的，会第一时间回复的！</p>
-            <p>总而言之，非常欢迎民那桑多多交流，想说啥就说啥。（一脸真诚）</p>
-            <strong>PS:评论系统中那个用邮箱就能评论的，其实是注册这个评论系统网站的账号，大家慎点。（要输密码的就没什么好东西）</strong>
-            <!--来必力评论系统-->
-            <div id="lv-container" data-id="city" data-uid="MTAyMC80ODM4Mi8yNDg3Ng==">
-                <script type="text/javascript">
-                    (function (d, s) {
-                        var j, e = d.getElementsByTagName(s)[0];
+            <p>由于自己菜鸡的本质，写不出原生的评论系统，只能接入第三方，第三方的评论系统是真的难找哇，要么就是国内被墙，要么就是非要评论者注册。历经千辛万苦，终于找到了这家符合要求的（落泪）。这个评论系统是支持Markdown的，会用的小伙伴可以炫一波技给我这个不会用的康康。</p>
+            <p>虽然整个界面还是很丑，但是呢，反正啥都能说，不管是不是关于这个小破站的事。评论的各位我都会收到邮件的，会第一时间回复的！我的回复你们也能收到邮件，吧。（测试中）</p>
+            <strong>总而言之，非常欢迎民那桑多多交流，想说啥就说啥。（一脸真诚）</strong>
+            <!--评论系统-->
+            <script src='//unpkg.com/valine/dist/Valine.min.js'></script>
+            <div id="vcomments"></div>
+            <script>
+                new Valine({
+                    el: '#vcomments',
+                    appId: 'cCE8pXKvbUCFj5JuT7hic3q6-gzGzoHsz',
+                    appKey: 'mgKE70GqsKmROxG4KalTmgVF',
+                    visitor: true,
+                    meta: ['nick','mail']
+                })
+            </script>
 
-                        if (typeof LivereTower === 'function') { return; }
-
-                        j = d.createElement(s);
-                        j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
-                        j.async = true;
-
-                        e.parentNode.insertBefore(j, e);
-                    })(document, 'script');
-                </script>
-            </div>
         </div>
     </div>
 </body>
