--- a/aboutWebsite/commentArea/commentArea.html
+++ b/aboutWebsite/commentArea/commentArea.html
@@ -92,10 +92,21 @@
                     appId: 'cCE8pXKvbUCFj5JuT7hic3q6-gzGzoHsz',
                     appKey: 'mgKE70GqsKmROxG4KalTmgVF',
                     visitor: true,
-                    meta: ['nick','mail']
+                    meta: ['nick', 'mail']
                 })
             </script>
-
+            <script src="https://upcdn.b0.upaiyun.com/libs/jquery/jquery-2.0.2.min.js"></script>
+            <script>
+                if (window.location.hash) {
+                    var checkExist = setInterval(function () {
+                        if ($(window.location.hash).length) {
+                            $('html, body').animate({ scrollTop: $(window.location.hash).offset().top - 90 }, 1000);
+                            clearInterval(checkExist);
+                        }
+                    }, 100);
+                }
+            </script>
+            <!--评论系统完-->
         </div>
     </div>
 </body>
