--- a/tutorial/OneNote/OneNote.html
+++ b/tutorial/OneNote/OneNote.html
@@ -146,6 +146,18 @@
                     meta: ['nick', 'mail']
                 })
             </script>
+            <script src="https://upcdn.b0.upaiyun.com/libs/jquery/jquery-2.0.2.min.js"></script>
+            <script>
+                if (window.location.hash) {
+                    var checkExist = setInterval(function () {
+                        if ($(window.location.hash).length) {
+                            $('html, body').animate({ scrollTop: $(window.location.hash).offset().top - 90 }, 1000);
+                            clearInterval(checkExist);
+                        }
+                    }, 100);
+                }
+            </script>
+            <!--评论系统完-->
 
         </div>
 </body>
