开发日志日常更新1.29

--- a/aboutWebsite/developmentLog/developmentLog.html
+++ b/aboutWebsite/developmentLog/developmentLog.html
@@ -57,6 +57,10 @@
                             <h1>2020.01.28</h1>
                             <p>Homepage、开发日志页、吐槽区上线</p>
                         </li>
+                        <li>
+                            <h1>2020.01.29</h1>
+                            <p>评论系统更换为Valine</p>
+                        </li>
                     </ul>
                 </div>
                 <div id="seeMore">
@@ -77,6 +81,15 @@
                         <p>
                             靠着仅仅一本书的HTML和CSS知识，局限性实在是太大了。接下来的几天还是应该再多多学习，JS得继续前进，还有我的TOEFL。（哭）
                         </p>
+                    </div>
+                    <div id="dividingLine"></div>
+
+                    <div class="log">
+                        <h1>2020.1.29</h1>
+                        <p>评论系统真的太难了，整了4家，从Disqus、来必力、畅言再到最后决定下来的Valine，前两个国内被墙，畅言非要注册才能评论，就只有Valine勉强能用。</p>
+                        <p>但是Valine这个评论部署起来是真麻烦啊，debug一下午，才把评论通知的邮件系统搞明白，最后那个页面定位的bug还是靠猜，引入了jQuery才蒙对搞定的。</p>
+                        <p>不会JS还是硬伤，休息一会就去学JS。</p>
+                        <p>嗯，就玩一小会。（真香警告）</p>
                     </div>
                     <div id="dividingLine"></div>
                 </div>
