部分文件整理

--- a/aboutWebsite/developmentLog/developmentLog.html
+++ b/aboutWebsite/developmentLog/developmentLog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>SoraPage-开发日志</title>
-    <link rel="icon" href="../../icon.png" type="image/x-icon">
+    <link rel="icon" href="../../wholeSite/icon.png" type="image/x-icon">
     <link type="text/css" rel="stylesheet" href="developmentLog.css" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156500969-1"></script>
@@ -19,7 +19,7 @@
 <body>
     <div id="wholePage">
         <header>
-            <span id="headerWebname"><a href="../../homepage.html">SoraPage</a></span>
+            <span id="headerWebname"><a href="../../homepage/homepage.html">SoraPage</a></span>
             <div id="headerTitle">开发日志</div>
         </header>
 
@@ -59,7 +59,7 @@
                         </li>
                         <li>
                             <h1>2020.01.29</h1>
-                            <p>评论系统更换为Valine</p>
+                            <p>评论系统更换为Valine、启用HTTPS</p>
                         </li>
                     </ul>
                 </div>
