--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>SoraPage-HomePage</title>
-    <link rel="icon" href="icon.png" type="image/x-icon">
+    <link rel="icon" href="../wholeSite/icon.png" type="image/x-icon">
     <link type="text/css" rel="stylesheet" href="homepage.css" media="screen and (min-device-width: 701px)" />
     <link type="text/css" rel="stylesheet" href="homepageM.css" media="screen and (max-device-width: 700px)" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -24,7 +24,7 @@
         <div id="catalog">
             <!--经验分享区-->
             <div id="tutorial" class="catalogLayout">
-                <div class="sortTitle"><a href="./tutorial/tutorialCatalog.html">经验分享区</a></div>
+                <div class="sortTitle"><a href="../tutorial/tutorialCatalog.html">经验分享区</a></div>
 
                 <div class="sortInfo">
                     <div class="updateInfo">
@@ -33,9 +33,9 @@
                     </div>
                     <div class="sortCatalog">
                         <ul>
-                            <li><a href="./tutorial/tutorialCatalog.html">目录页</a></li>
-                            <li><a href="./tutorial/SSR/SSR.html">SSR使用教程</a></li>
-                            <li><a href="./tutorial/OneNote/OneNote.html">OneNote调教方法</a></li>
+                            <li><a href="../tutorial/tutorialCatalog.html">目录页</a></li>
+                            <li><a href="../tutorial/SSR/SSR.html">SSR使用教程</a></li>
+                            <li><a href="../tutorial/OneNote/OneNote.html">OneNote调教方法</a></li>
                         </ul>
                     </div>
                 </div>
@@ -59,10 +59,10 @@
                     <div class="sortCatalog">
                         <ul>
                             <li><a href="">关于Sora和SoraPage (施工中...)</a></li>
-                            <li><a href="./aboutWebsite/developmentLog/developmentLog.html">SoraPage开发日志</a></li>
+                            <li><a href="../aboutWebsite/developmentLog/developmentLog.html">SoraPage开发日志</a></li>
                             <li id="commentArea">
                                 <img src="comment.svg" width="7%">
-                                <a href="./aboutWebsite/commentArea/commentArea.html">吐槽区</a>
+                                <a href="../aboutWebsite/commentArea/commentArea.html">吐槽区</a>
                             </li>
                         </ul>
                     </div>
