--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>SoraPage</title>
-    <link rel="icon" href="icon.png" type="image/x-icon">
+    <link rel="icon" href="./wholeSite/icon.png" type="image/x-icon">
     <style>
         html,
         body {
@@ -63,7 +63,7 @@
 <body>
     <div id="tableBackground">
         <div id="background">
-            <a href="homepage.html">
+            <a href="./homepage/homepage.html">
                 <h1>SoraPage</h1>
             </a>
         </div>
