--- a/tutorial/tutorialCatalog.html
+++ b/tutorial/tutorialCatalog.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>SoraPage-教程</title>
-    <link rel="icon" href="../icon.png" type="image/x-icon">
+    <link rel="icon" href="../wholeSite/icon.png" type="image/x-icon">
     <link type="text/css" rel="stylesheet" href="tutorialHeader.css" />
     <link type="text/css" rel="stylesheet" href="tutorialCatalog.css" />
     <style>
@@ -33,7 +33,7 @@
 <body>
     <header>
         <span id="headerWebname">
-            <a href="../homepage.html">SoraPage</a>
+            <a href="../homepage/homepage.html">SoraPage</a>
         </span>
         <div id="headerTitle">教程</div>
     </header>
