--- a/aboutWebsite/commentArea/commentArea.html
+++ b/aboutWebsite/commentArea/commentArea.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SoraPage-吐槽区</title>
-    <link rel="icon" href="../../icon.png" type="image/x-icon">
+    <link rel="icon" href="../../wholeSite/icon.png" type="image/x-icon">
     <link type="text/css" rel="stylesheet" href="../../tutorial/tutorialHeader.css" />
     <style>
         html,
@@ -70,7 +70,7 @@
 
 <body>
     <header>
-        <div id="headerWebname"><a href="../../homepage.html">SoraPage</a></div>
+        <div id="headerWebname"><a href="../../homepage/homepage.html">SoraPage</a></div>
         <div id="headerTitle">吐槽区</div>
     </header>
 
@@ -80,7 +80,8 @@
     <div id="allContent">
         <div id="comments">
             <p>欢迎大噶来到吐槽区，目前由于处于内测阶段，估计也没啥不认识的小伙伴会戳进来...</p>
-            <p>由于自己菜鸡的本质，写不出原生的评论系统，只能接入第三方，第三方的评论系统是真的难找哇，要么就是国内被墙，要么就是非要评论者注册。历经千辛万苦，终于找到了这家符合要求的（落泪）。这个评论系统是支持Markdown的，会用的小伙伴可以炫一波技给我这个不会用的康康。</p>
+            <p>由于自己菜鸡的本质，写不出原生的评论系统，只能接入第三方，第三方的评论系统是真的难找哇，要么就是国内被墙，要么就是非要评论者注册。历经千辛万苦，终于找到了这家符合要求的（落泪）。这个评论系统是支持Markdown的，会用的小伙伴可以炫一波技给我这个不会用的康康。
+            </p>
             <p>虽然整个界面还是很丑，但是呢，反正啥都能说，不管是不是关于这个小破站的事。评论的各位我都会收到邮件的，会第一时间回复的！我的回复你们也能收到邮件，吧。（测试中）</p>
             <strong>总而言之，非常欢迎民那桑多多交流，想说啥就说啥。（一脸真诚）</strong>
             <!--评论系统-->
