--- a/tutorial/OneNote/OneNote.html
+++ b/tutorial/OneNote/OneNote.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>SoraPage-OneNote</title>
-    <link rel="icon" href="../../icon.png" type="image/x-icon">
+    <link rel="icon" href="../../wholeSite/icon.png" type="image/x-icon">
     <link type="text/css" rel="stylesheet" href="../tutorialHeader.css" />
     <link type="text/css" rel="stylesheet" href="../tutorial.css" />
     <link type="text/css" rel="stylesheet" href="OneNote.css" />
@@ -21,7 +21,7 @@
 <body>
     <header>
         <span id="headerWebname">
-            <a href="../../homepage.html">SoraPage</a>
+            <a href="../../homepage/homepage.html">SoraPage</a>
         </span>
         <div id="headerTitle">OneNote调教方法</div>
     </header>
