--- a/tutorial/SSR/SSR.html
+++ b/tutorial/SSR/SSR.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>SoraPage-SSR教程</title>
-    <link rel="icon" href="../../icon.png" type="image/x-icon">
+    <link rel="icon" href="../../wholeSite/icon.png" type="image/x-icon">
     <link type="text/css" rel="stylesheet" href="../tutorialHeader.css" />
     <link type="text/css" rel="stylesheet" href="../tutorial.css" />
     <link type="text/css" rel="stylesheet" href="SSR.css" />
@@ -20,7 +20,7 @@
 
 <body>
     <header>
-        <div id="headerWebname"> <a href="../../homepage.html">SoraPage</a> </div>
+        <div id="headerWebname"> <a href="../../homepage/homepage.html">SoraPage</a> </div>
         <div id="headerTitle">SSR教程</div>
     </header>
 
