--- a/aboutWebsite/commentArea/commentArea.html
+++ b/aboutWebsite/commentArea/commentArea.html
@@ -53,7 +53,6 @@
             background-color: rgba(240, 240, 240, 0.7);
             border-radius: 25px;
             line-height: 2;
-            font-size: large;
             color: rgb(25, 25, 25);
         }
     </style>
@@ -71,7 +70,7 @@
 <body>
     <header>
         <div id="headerWebname"><a href="../../homepage/homepage.html">SoraPage</a></div>
-        <div id="headerTitle">吐槽区</div>
+        <div id="headerTitle">留言板</div>
     </header>
 
     <div id="background"><img src="CAbackground.png"></div>
@@ -79,11 +78,11 @@
 
     <div id="allContent">
         <div id="comments">
-            <p>欢迎大噶来到吐槽区，目前由于处于内测阶段，估计也没啥不认识的小伙伴会戳进来...</p>
-            <p>由于自己菜鸡的本质，写不出原生的评论系统，只能接入第三方，第三方的评论系统是真的难找哇，要么就是国内被墙，要么就是非要评论者注册。历经千辛万苦，终于找到了这家符合要求的（落泪）。这个评论系统是支持Markdown的，会用的小伙伴可以炫一波技给我这个不会用的康康。
-            </p>
-            <p>虽然整个界面还是很丑，但是呢，反正啥都能说，不管是不是关于这个小破站的事。评论的各位我都会收到邮件的，会第一时间回复的！我的回复你们也能收到邮件，吧。（测试中）</p>
-            <strong>总而言之，非常欢迎民那桑多多交流，想说啥就说啥。（一脸真诚）</strong>
+            <p>欢迎大噶来到SoraPage御用留言板，目前由于处于内测阶段，估计也没啥不认识的小伙伴会戳进来...</p>
+            <p>由于自己菜鸡的本质，写不出原生的评论系统，只能接入第三方，第三方的评论系统是真的难找哇，要么就是国内被墙，要么就是非要评论者注册。历经千辛万苦，终于找到了这家符合要求的（落泪）。</p>
+            <p>反正啥都能说，不管是不是关于这个小破站的事。评论的各位我都会收到邮件的，会第一时间回复的！我的回复你们也能收到邮件的呢。所以大家在评论的时候记得把邮箱也填上呀（￣ω￣）</p>
+            <p><strong>总而言之，非常欢迎民那桑多多交流，想说啥就说啥。（一脸真诚）</strong></p>
+            <p><strong>PS：大家在评论的时候就不要带上任何个人信息啦~（包括绰号）</strong></p>
             <!--评论系统-->
             <script src='//unpkg.com/valine/dist/Valine.min.js'></script>
             <div id="vcomments"></div>
