--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -9,7 +9,7 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156500969-1"></script>
     <script>
-        alert("PC端食用效果更佳~\n欢迎大家到吐槽区和教程下方评论区留言~");
+        alert("PC端食用效果更佳~\n欢迎大家到留言板和教程下方评论区留言~");
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
@@ -62,7 +62,7 @@
                             <li><a href="../aboutWebsite/developmentLog/developmentLog.html">SoraPage开发日志</a></li>
                             <li id="commentArea">
                                 <img src="comment.svg" width="7%">
-                                <a href="../aboutWebsite/commentArea/commentArea.html">吐槽区</a>
+                                <a href="../aboutWebsite/commentArea/commentArea.html">留言板</a>
                             </li>
                         </ul>
                     </div>
