--- a/aboutWebsite/webDevelopment/webhook/webhook.html
+++ b/aboutWebsite/webDevelopment/webhook/webhook.html
@@ -4,29 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../../../wholeSite/icon.png" type="image/x-icon">
-    <title>SoraPage</title>
-    <link type="text/css" rel="stylesheet" href="../../../tutorial/tutorialHeader.css" />
+    <title>SoraPage-WebHook</title>
+    <link type="text/css" rel="stylesheet" href="../../../wholeSite/fixedHeader.css" />
+    <link type="text/css" rel="stylesheet" href="../../../wholeSite/stripesLayout.css" />
     <link type="text/css" rel="stylesheet" href="../../../wholeSite/prism.css" />
     <script src="../../../wholeSite/prism.js"></script>
     <style>
-        #allContents {
-            margin-top: 36px;
-        }
-
-        #passage {
-            line-height: 2;
-            color: rgb(50, 50, 50);
-        }
-
-        .backgroundColor_gray {
-            padding: 0 15% 0 15%;
-            background-color: rgb(240, 240, 240);
-        }
-
-        .backgroundColor_white {
-            padding: 0 15% 0 15%;
-        }
-
         ol,
         ul {
             margin-inline-start: 2rem;
@@ -34,10 +17,6 @@
 
         ol ul {
             list-style-type: disc;
-        }
-
-        #comments {
-            padding: 3% 15% 0 15%;
         }
     </style>
 </head>
