--- a/aboutWebsite/commentArea/commentArea.html
+++ b/aboutWebsite/commentArea/commentArea.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SoraPage-吐槽区</title>
     <link rel="icon" href="../../wholeSite/icon.png" type="image/x-icon">
-    <link type="text/css" rel="stylesheet" href="../../tutorial/tutorialHeader.css" />
+    <link type="text/css" rel="stylesheet" href="../../wholeSite/fixedHeader.css" />
     <style>
         html,
         body {
