--- a/tutorial/OneNote/OneNote.html
+++ b/tutorial/OneNote/OneNote.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>SoraPage-OneNote</title>
     <link rel="icon" href="../../wholeSite/icon.png" type="image/x-icon">
-    <link type="text/css" rel="stylesheet" href="../tutorialHeader.css" />
+    <link type="text/css" rel="stylesheet" href="../../wholeSite/fixedHeader.css" />
     <link type="text/css" rel="stylesheet" href="../tutorial.css" />
     <link type="text/css" rel="stylesheet" href="OneNote.css" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
