--- a/tutorial/tutorialCatalog.html
+++ b/tutorial/tutorialCatalog.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>SoraPage-教程</title>
     <link rel="icon" href="../wholeSite/icon.png" type="image/x-icon">
-    <link type="text/css" rel="stylesheet" href="tutorialHeader.css" />
+    <link type="text/css" rel="stylesheet" href="../wholeSite/fixedHeader.css" />
     <link type="text/css" rel="stylesheet" href="tutorialCatalog.css" />
     <style>
         #background {
